<resources>
    <string name="app_name">Jrafika</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="histogram_title">Histogram</string>
    <string name="histogram_equalization_title">Histogram Equalization</string>
    <string name="linear_streching_title">Linear Streching</string>
    <string name="chain_code_title">Chain Code</string>
    <string name="image_skeleton_title">Image Skeleton</string>
    <string name="image_handwriting_title">Image Handwriting</string>

    <string name="red_histogram">Red Histogram</string>
    <string name="green_histogram">Green Histogram</string>
    <string name="blue_histogram">Blue Histogram</string>
    <string name="grayscaled_histogram">Grayscaled Histogram</string>
    <string name="original_histogram">Original Histogram</string>
    <string name="specified_histogram">Specified Histogram</string>

    <string name="proceed">Proceed</string>
    <string name="input_range">Input Range</string>
    <string name="output_range">Output Range</string>
    <string name="pivot_1">Pivot 1</string>
    <string name="pivot_2">Pivot 2</string>
    <string name="pivot_3">Pivot 3</string>
    <string name="pivot_4">Pivot 4</string>
    <string name="histogram_specification_title">Histogram Specification</string>
    <string name="equalized_histogram">Equalized Histogram</string>
    <string name="stretched_histogram">Stretched Histogram</string>
    <string name="skeleton_title">Skeleton</string>
    <string name="median_filter_title">Median Filter</string>
    <string name="gradient_operator_title">Gradient Operator</string>
    <string name="difference_operator_title">Difference Operator</string>
    <string name="average_filter_title">Average Filter</string>
    <string name="custom_filter_title">Custom Filter</string>
    <string name="face_localizer_title">Face Localizer</string>

    <string name="sobel">Sobel</string>
    <string name="prewitt">Prewitt</string>
    <string name="robert">Robert</string>
    <string name="freichen">Frei-Chen</string>
    <string name="face_recognizer_title">Face Recognizer</string>

</resources>
